# dynamic-array-linked-list

./: CMakeLists.txt  README.md  linked_list.c  main.c
input/: modules.csv
src/: dynamic_array.c  dynamic_array.h  dynarray.c  dynarray.h  linked_list.c  linked_list.h  modules.c  modules.h
